--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.6'
 services:
   iris:
-    init: true
+#    init: true
     image: intersystemscommunity/pexdemo:latest
     build:
       context: .
